<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.workjournal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.app.workjournal.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


    <fragment
        android:id="@+id/nav_report"
        android:name="com.app.workjournal.ui.report.ReportFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.app.workjournal.ui.logout.LogOutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>