<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageButton
            android:id="@+id/buttonJournalDel"
            style="@style/WhiteButtonStyleAdd"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.12"
            android:contentDescription="@string/delete"
            app:srcCompat="@drawable/bin_delete_remove_trash_svgrepo_com"
            app:tint="@color/design_default_color_error"
            />

        <TextView
            android:id="@+id/textViewMonthName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/operation_name"
            android:padding="2dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewMonthQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/textJournalQuantityEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:autofillHints=""
            android:hint="@string/none"
            android:inputType="number"
            android:paddingTop="1dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />


        <ImageButton
            android:id="@+id/buttonJournalUpdate"
            style="@style/WhiteButtonStyleAdd"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.12"
            android:contentDescription="@string/add"
            app:srcCompat="@drawable/edit_svgrepo_com" />

        <ImageButton
            android:id="@+id/buttonJournalUpdateSave"
            style="@style/WhiteButtonStyleAdd"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.12"
            android:contentDescription="@string/save"
            android:visibility="gone"
            app:srcCompat="@drawable/icons8_ok_24" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />

</LinearLayout>