<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/textViewReportName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/operation_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewReportQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/none"
            android:textAlignment="center"
            android:textSize="24sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/unit_quantity"
            android:textSize="18sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />

</LinearLayout>