<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        >


        <TextView
            android:id="@+id/textJournalOperationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="Operation Name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textJournalQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textJournalQuantityEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:textSize="24sp"
            android:textStyle="bold"
            android:inputType="number"
            android:textAlignment="center"
            android:paddingTop="1dp"
            android:hint="@string/none"
            android:autofillHints=""
            tools:visibility="gone"
            android:text="1" />

        <ImageButton
            android:id="@+id/buttonJournalAdd"
            style="@style/WhiteButtonStyleAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/add"
            android:visibility="gone"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />

</LinearLayout>
