<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".ui.home.HomeFragment">


    <!-- Верхня область -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_section"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:background="#C9000000"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <!-- Кнопка для переходу на попередню дату -->
        <Button
            android:id="@+id/button_previous_date"
            style="@style/WhiteButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="◀"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/text_current_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- Текстове поле для відображення поточної дати -->
        <TextView
            android:id="@+id/text_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="01 Jan 2025"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_next_date"
            app:layout_constraintStart_toEndOf="@+id/button_previous_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
        <!-- Кнопка для переходу на наступну дату -->
        <Button
            android:id="@+id/button_next_date"
            style="@style/WhiteButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="▶"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_current_date"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/middle_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_section">

        <!-- Контейнер для заголовка та стрілки -->
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="4dp"
                android:text="@string/list_operations_user_title"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/expandArrow"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/button_operation_home"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:src="@drawable/down_svgrepo_com"
                app:tint="#C9000000" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewJournalsDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:listitem="@layout/item_journal_day" />


    </LinearLayout>

    <!-- Нижня область -->
    <LinearLayout
        android:id="@+id/bottom_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shadow_bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle_section">


        <TextView
            android:id="@+id/recyclerViewJournalsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:text="@string/day_journal_title"
            android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewJournalsMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/bottom_section"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewJournalsTitle"
                tools:itemCount="32"
                tools:listitem="@layout/item_journal_month" />


    </LinearLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>
